Fixed problem with overflow-x

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ button {
     scroll-snap-type: y mandatory;
     position: relative;
     z-index: 1;
+    overflow-x: hidden;
 }
 
 
